Acrescentado valor das vendas

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Olá, mundo!</h1>
+    <p>Vendas = R$ 5.000,00</p>
     <a href="vendas.html">Vá para a página de vendas</a>
 </body>
 </html>
