--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Página de vendas</h1>
-    <a href="index.html">volte para a página inicial</a>
+    <a href="index.html">volte para a página home</a>
 </body>
 </html>
