--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página de vendas</h1>
+    <h1>Vendas = R$ 6000.00</h1>
     <a href="index.html">volte para a página home</a>
     <h2>Relatório de vendas</h2>
     <p>Venda 1</p>
