--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Olá, mundo!</h1>
+    <h1>Olá!</h1>
     <a href="vendas.html">Vá para a página de vendas</a>
 </body>
 </html>
